background-size specified by a single value in background shorthand fails to parse. https://bugs.webkit.org/show_bug.cgi?id=86739

Patch by Joe Thomas <joethomas@motorola.com> on 2012-05-18
Reviewed by Tony Chang.

While parsing the background shorthand property, if the second parsedValue is not a valid unit,
parseFillSize should return the first parsedValue instead of failing.

Source/WebCore:

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFillSize):

LayoutTests:

* fast/backgrounds/background-shorthand-with-backgroundSize-style-expected.txt:
* fast/backgrounds/background-shorthand-with-backgroundSize-style.html:

Canonical link: https://commits.webkit.org/104521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117622 268f45cc-cd09-0410-ab3c-d52691b4dbfc